@@ -1,3 +1,4 @@
 rem gate.bat - DOS front-end for GATE. Hamish, March 2001
 rem $Id$
 
+w:\jdk\jdk1.3\bin\java -Djava.ext.dirs=..\lib\ext -classpath gate.jar;..\lib\ext\guk.jar -Xmx200m gate.Main
