@@ -3,11 +3,14 @@
 # $Id$
 
 # if the correct version of java isn't in your path, or in the
-# JAVA_HOME variable, then set JAVA_HOME to the correct location here:
-#JAVA_HOME='w:\jdk\jdk1.3\bin
+# JAVA_HOME variable, then set JAVA_HOME to the correct location here
 
-JAVA=java
-
-if [ x$JAVA_HOME != x ]
+if [ x${JAVA_HOME} != x ]
 then
   JAVA=${JAVA_HOME}/bin/java
+else
+  JAVA=java
+fi
+
+${JAVA} -Djava.ext.dirs= ../lib/ext -classpath gate.jar:../lib/ext/guk.jar \
+  -Xmx200m gate.Main
